--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,16 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+
 ### VS Code ###
 .vscode/
+
+.DS_Store
+.metadata
+.mvn
+
+mvnw
+mvnw.cmd
+
+
+
